@@ -1,0 +1,67 @@
+PREHOOK: query: EXPLAIN SELECT null + 7, 1.0 - null, null + null,
+               CAST(21 AS BIGINT) % CAST(5 AS TINYINT),
+               CAST(21 AS BIGINT) % CAST(21 AS BIGINT),
+               9 % "3" FROM src LIMIT 1
+PREHOOK: type: QUERY
+POSTHOOK: query: EXPLAIN SELECT null + 7, 1.0 - null, null + null,
+               CAST(21 AS BIGINT) % CAST(5 AS TINYINT),
+               CAST(21 AS BIGINT) % CAST(21 AS BIGINT),
+               9 % "3" FROM src LIMIT 1
+POSTHOOK: type: QUERY
+ABSTRACT SYNTAX TREE:
+  (TOK_QUERY (TOK_FROM (TOK_TABREF src)) (TOK_INSERT (TOK_DESTINATION (TOK_DIR TOK_TMP_FILE)) (TOK_SELECT (TOK_SELEXPR (+ TOK_NULL 7)) (TOK_SELEXPR (- 1.0 TOK_NULL)) (TOK_SELEXPR (+ TOK_NULL TOK_NULL)) (TOK_SELEXPR (% (TOK_FUNCTION TOK_BIGINT 21) (TOK_FUNCTION TOK_TINYINT 5))) (TOK_SELEXPR (% (TOK_FUNCTION TOK_BIGINT 21) (TOK_FUNCTION TOK_BIGINT 21))) (TOK_SELEXPR (% 9 "3"))) (TOK_LIMIT 1)))
+
+STAGE DEPENDENCIES:
+  Stage-1 is a root stage
+  Stage-0 is a root stage
+
+STAGE PLANS:
+  Stage: Stage-1
+    Map Reduce
+      Alias -> Map Operator Tree:
+        src 
+          TableScan
+            alias: src
+            Select Operator
+              expressions:
+                    expr: (null + 7)
+                    type: int
+                    expr: (1.0 - null)
+                    type: double
+                    expr: (null + null)
+                    type: tinyint
+                    expr: (UDFToLong(21) % UDFToByte(5))
+                    type: bigint
+                    expr: (UDFToLong(21) % UDFToLong(21))
+                    type: bigint
+                    expr: (9 % '3')
+                    type: double
+              outputColumnNames: _col0, _col1, _col2, _col3, _col4, _col5
+              Limit
+                File Output Operator
+                  compressed: false
+                  GlobalTableId: 0
+                  table:
+                      input format: org.apache.hadoop.mapred.TextInputFormat
+                      output format: org.apache.hadoop.hive.ql.io.HiveIgnoreKeyTextOutputFormat
+
+  Stage: Stage-0
+    Fetch Operator
+      limit: 1
+
+
+PREHOOK: query: SELECT null + 7, 1.0 - null, null + null,
+       CAST(21 AS BIGINT) % CAST(5 AS TINYINT),
+       CAST(21 AS BIGINT) % CAST(21 AS BIGINT),
+       9 % "3" FROM src LIMIT 1
+PREHOOK: type: QUERY
+PREHOOK: Input: default@src
+PREHOOK: Output: file:/data/users/pyang/merge/trunk/VENDOR.hive/trunk/build/ql/tmp/1374914728/10000
+POSTHOOK: query: SELECT null + 7, 1.0 - null, null + null,
+       CAST(21 AS BIGINT) % CAST(5 AS TINYINT),
+       CAST(21 AS BIGINT) % CAST(21 AS BIGINT),
+       9 % "3" FROM src LIMIT 1
+POSTHOOK: type: QUERY
+POSTHOOK: Input: default@src
+POSTHOOK: Output: file:/data/users/pyang/merge/trunk/VENDOR.hive/trunk/build/ql/tmp/1374914728/10000
+NULL	NULL	NULL	1	0	0.0
