@@ -445,6 +445,8 @@ Release 0.5.0 -  Unreleased
     HIVE-1048. Make output of TestParse deterministic
     (Paul Yang via namit)
 
+    HIVE-1045. (bigint % int) should return bigint instead of double.
+    (Paul Yang via zshao)
 
 Release 0.4.0 -  Unreleased
 
